TEST CHANGEMENT DE LA LIGNE

--- a/myexample.ipynb
+++ b/myexample.ipynb
@@ -2,23 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test new line\n"
+     ]
     }
    ],
    "source": [
     "a=2**5\n",
-    "type(a)"
+    "type(a)\n",
+    "print('test new line')"
    ]
   },
   {
